--- a/Frontend/Components/_Imports.razor
+++ b/Frontend/Components/_Imports.razor
@@ -2,10 +2,10 @@
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.JSInterop
 @using AntDesign
 @using BlazorMonaco
 @using BlazorMonaco.Editor
 @using BlazorMonaco.Languages
-@using Frontend
-@using Frontend.Shared
+@using Frontend.Components
