--- a/Frontend/Components/Routes.razor
+++ b/Frontend/Components/Routes.razor
@@ -1,4 +1,4 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+<Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
         <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
@@ -10,5 +10,3 @@
         </LayoutView>
     </NotFound>
 </Router>
-
-<AntContainer/>
